# ImageRepository

./: ImageRepository.sln  README.md
ConsoleTest/: ConsoleTest.csproj  Program.cs
ImageHelper/: CMakeLists.txt  ImageHelper.vcxproj  ImageHelper.vcxproj.filters  dllexport.cpp  dllexport.hpp
ImageHelperSharp/: ImageHelperSharp.csproj  OpenCVService.cs  StbService.cs
ImageHelperSharp/Common/: ImInfo.cs  ImSize2D.cs  LifeTimeHandler.cs  native_array.cs
ImageHelperSharp/Native/: OpenCVInterop.cs  SharedConstant.cs  StbInterop.cs
ImgRepo.Data/: AttributeMetaData.cs  Extensions.cs  ImgRepo.Data.csproj
ImgRepo.Data/Enums/: AttributeType.cs
ImgRepo.Data/Interface/: IBasicEntityAttribute.cs  IBasicEntityInformation.cs  IBasicEntityRecord.cs  IBasicObjectDto.cs  IBasicUploadModel.cs  IImageFileUriConvertable.cs  IObjectBindingRecord.cs
ImgRepo.Model/: Extensions.cs  ImageRepositoryContext.cs  ImgRepo.Model.csproj
ImgRepo.Model/ApiModel/: ApiFileModel.cs  ApiThumbViewModel.cs  ApiUploadModel.cs
ImgRepo.Model/Common/: ApiAttributeEdit.cs  ApiFileModel.cs  ApiUploadModel.cs  BasicDetails.cs  BasicInfo.cs
ImgRepo.Model/Entities/: AlbumImageRecord.cs  AlbumInformation.cs  AlbumRecord.cs  (+10 more)
ImgRepo.Service/: ArtistService.cs  Extensions.cs  Factories.cs  GlobalSettings.cs  IAlbumService.cs  IArtistService.cs  ICommonAttributeService.cs  ICommonObjectService.cs  IFileAccessService.cs  IImageService.cs  ImageService.cs  ImgRepo.Service.csproj
ImgRepo.Web/: ImgRepo.Web.csproj  Program.cs  Startup.cs  appsettings.json
OpenCVTest/: OpenCVTest.vcxproj  Source.cpp
(+86 files in other folders)
